Generate third party libraries list and embed it in every release aar